--- a/src/main/resources/templates/doctor.html
+++ b/src/main/resources/templates/doctor.html
@@ -150,13 +150,13 @@
                     <table id="prescriptionTable">
                         <thead>
                         <tr>
-                            <th>코드</th>
+                            <th style="width:15%;">코드</th>
                             <th>명칭</th>
-                            <th>용량</th>
-                            <th>일수</th>
+                            <th style="width:10%;">용량</th>
+                            <th style="width:10%;">일수</th>
                             <th style="width:10%;">횟수</th>
-                            <th style="width:15%;">급여</th>
-                            <th style="width:18%;">시간</th>
+                            <th style="width:12%;">급여</th>
+                            <th style="width:10%;">시간</th>
                             <th>X</th>
                         </tr>
                         </thead>
@@ -979,11 +979,11 @@
         <div class="timing-radio-group">
             <label>
                 <input type="radio" name="prescription-timing-${idx}" value="식전 30분" checked />
-                식전 30분
+                식전
             </label>
             <label>
                 <input type="radio" name="prescription-timing-${idx}" value="식후 30분" />
-                식후 30분
+                식후
             </label>
         </div>
         </td>
